# py-game-collection

./: .gitignore  Dockerfile  README.md  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt  uwsgi.conf
gaming/: admin.py  models.py  tests.py  urls.py  views.py
gaming/api/: serializers.py  tests.py  urls.py  views.py
gaming/fixtures/: testdata.json
gaming/importer/: backloggery.py
gaming/migrations/: 0001_initial.py  0002_alter_game_created_date.py  0002_auto_20220821_1851.py  0002_auto_20220914_1528.py  0003_merge_20230207_1812.py  0004_rename_download_game_download_only.py  0005_alter_game_description_alter_game_genre.py  0006_tag_alter_game_options_alter_gamesystem_options_and_more.py  0007_game_rating_game_release_date_and_more.py  0008_alter_game_rating_alter_game_release_date.py
gaming/static/css/: style.css
gaming/templates/: base.html
gaming/templates/game/: detail.html  list.html
gaming/templates/gamesystem/: detail.html  list.html
gaming/templatetags/: gaming_extras.py
py_game_collection/: settings.py  urls.py  wsgi.py
react-app/: package-lock.json  package.json
react-app/src/: App.tsx  main.tsx
react-app/src/components/: Button.tsx  Filter.tsx  Form.tsx  GameList.tsx  GamesystemFilter.tsx  GenreFilter.tsx  LikeButton.tsx  ListGroup.tsx
react-app/src/services/: api-client.ts  game-service.ts
