[tool.poetry]
name = "py-game-collection"
version = "0.1.0"
description = "A Django app to manage a video game collection"
authors = ["Bastian Ballmann <balle@codekid.net>"]
license = "GPLv2"
readme = "README.md"
packages = [{include = "py_game_collection"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.0"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
wikipedia = "^1.4.0"
djangorestframework = "^3.15.2"


[tool.poetry.group.dev.dependencies]
pip-audit = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
